<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2020 Kolibree. All rights reserved
  ~
  ~ Copying this file via any medium without the prior written consent of Kolibree is strictly
  ~ prohibited
  ~
  ~ Proprietary and confidential
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  tools:context=".ui.connect.AmazonDashConnectActivity">

  <data>

    <import type="android.view.View" />

    <variable
      name="viewModel"
      type="com.kolibree.android.amazondash.ui.connect.AmazonDashConnectViewModel" />

  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/amazon_dash_connect"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">

    <ScrollView
      android:id="@+id/connect_scrollable_content"
      android:layout_width="match_parent"
      android:layout_height="@dimen/match_constraints"
      android:fillViewport="true"
      app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.0">

      <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true">

        <FrameLayout
          android:id="@+id/connect_logo"
          android:layout_width="@dimen/match_constraints"
          android:layout_height="@dimen/match_constraints"
          android:background="?backgroundColorDark"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHeight_percent="@dimen/amazon_dash_logo_height"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent">

          <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:src="@{viewModel.logo}"
            tools:src="@drawable/amazon_alexa_brushes_logo" />

        </FrameLayout>

        <TextView
          android:id="@+id/connect_congratulations"
          android:layout_width="@dimen/match_constraints"
          android:layout_height="wrap_content"
          android:layout_marginStart="@dimen/dot_quad"
          android:layout_marginTop="@dimen/dot_double"
          android:layout_marginEnd="@dimen/dot_quad"
          android:includeFontPadding="false"
          android:text="@string/amazon_dash_celebration_header"
          android:textAppearance="?textAppearanceHeadline2"
          android:visibility="@{viewModel.congratulationsVisible ? View.VISIBLE : View.GONE}"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/connect_logo"
          tools:text="@string/amazon_dash_celebration_header" />

        <TextView
          android:id="@+id/connect_description"
          android:layout_width="@dimen/match_constraints"
          android:layout_height="wrap_content"
          android:layout_marginStart="@dimen/dot_quad"
          android:layout_marginTop="@dimen/dot_double"
          android:layout_marginEnd="@dimen/dot_quad"
          android:textAppearance="?textAppearanceBody1"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/connect_congratulations"
          app:layout_goneMarginTop="@dimen/dot_quad"
          app:spannedText="@{viewModel.description}"
          tools:text="@string/amazon_dash_connect_description" />

        <ImageView
          android:id="@+id/connect_divider"
          android:layout_width="@dimen/match_constraints"
          android:layout_height="wrap_content"
          android:layout_marginStart="@dimen/dot_quad"
          android:layout_marginTop="@dimen/dot_double"
          android:layout_marginEnd="@dimen/dot_quad"
          android:visibility="@{viewModel.loadingVisible ? View.INVISIBLE : View.VISIBLE}"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/connect_description"
          app:srcCompat="@drawable/alexa_divider" />

        <com.airbnb.lottie.LottieAnimationView
          android:id="@+id/connect_progress"
          android:layout_width="@dimen/match_constraints"
          android:layout_height="@dimen/match_constraints"
          android:visibility="@{viewModel.loadingVisible ? View.VISIBLE : View.GONE}"
          app:layout_constraintBottom_toBottomOf="@id/connect_divider"
          app:layout_constraintEnd_toEndOf="@id/connect_divider"
          app:layout_constraintStart_toStartOf="@id/connect_divider"
          app:layout_constraintTop_toTopOf="@id/connect_divider"
          app:lottie_autoPlay="true"
          app:lottie_loop="true"
          app:lottie_rawRes="@raw/circle_loading_animation_dark" />

        <TextView
          android:id="@+id/connect_title"
          android:layout_width="@dimen/match_constraints"
          android:layout_height="wrap_content"
          android:layout_marginStart="@dimen/dot_quad"
          android:layout_marginTop="@dimen/dot_double"
          android:layout_marginEnd="@dimen/dot_quad"
          android:text="@{viewModel.title}"
          android:textAppearance="?textAppearanceHeadline4"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/connect_divider"
          tools:text="@string/amazon_dash_connect_title" />

        <TextView
          android:id="@+id/connect_body"
          android:layout_width="@dimen/match_constraints"
          android:layout_height="wrap_content"
          android:layout_marginStart="@dimen/dot_quad"
          android:layout_marginTop="@dimen/dot"
          android:layout_marginEnd="@dimen/dot_quad"
          android:layout_marginBottom="@dimen/dot_double"
          android:text="@{viewModel.body}"
          android:textAppearance="?textAppearanceBody1"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/connect_title"
          app:layout_constraintVertical_bias="0.0"
          tools:text="@string/amazon_dash_connect_body" />

      </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/constraintLayout"
      android:layout_width="@dimen/match_constraints"
      android:layout_height="wrap_content"
      android:animateLayoutChanges="true"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent">

      <View
        android:id="@+id/connect_buttons_divider"
        android:layout_width="@dimen/match_constraints"
        android:layout_height="1dp"
        android:alpha="0.3"
        android:background="?colorBackgroundDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

      <Button
        android:id="@+id/connect_confirm_button"
        android:layout_width="@dimen/match_constraints"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dot_quad"
        android:layout_marginTop="@dimen/dot_double"
        android:layout_marginEnd="@dimen/dot_quad"
        android:enabled="@{viewModel.confirmationButtonEnabled}"
        android:onClick="@{() -> viewModel.onConfirmClick()}"
        android:text="@{viewModel.confirmationButton}"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/connect_buttons_divider"
        tools:text="@string/amazon_dash_connect_confirm_button" />

      <Button
        android:id="@+id/connect_dismiss_button"
        style="?borderlessButtonStyle"
        android:layout_width="@dimen/match_constraints"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dot_quad"
        android:layout_marginEnd="@dimen/dot_quad"
        android:layout_marginBottom="@dimen/dot"
        android:enabled="@{viewModel.dismissButtonEnabled}"
        android:onClick="@{() -> viewModel.onDismissClick()}"
        android:text="@string/amazon_dash_connect_dismiss_button"
        android:textAppearance="?textAppearanceButton"
        android:textColor="?android:textColorTertiary"
        android:visibility="@{viewModel.dismissButtonVisible ? View.VISIBLE : View.GONE}"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/connect_confirm_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

  </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
