...
    <string name="settings_unlink">"unlink"</string>
    <string name="settings_unlink_amazon_title">"Unlink Amazon Dash"</string>

    <!-- Fuzzy -->
    <string name="settings_unlink_amazon_body">"Do you really want to unlink your Amazon account?"</string>
    <string name="settings_unlink_amazon_confirmed">"unlink"</string>
    <string name="amazon_dash_connect_loading_title">"please wait…"</string>
    <string name="amazon_dash_connect_loading_body">"We are almost done."</string>
    <string name="amazon_dash_celebration_header">"congratulations"</string>
    <string name="amazon_dash_celebration_description"><![CDATA[Your hum by Colgate is <b>now linked with Alexa</b>. You will receive email and Alexa voice notifications when your toothbrush head needs to be replaced.<br/><br/>You can <b>set up smart reorders</b> or <b>manage your notification settings</b> at any time by navigating to your Devices within the Alexa App and clicking on “Supply”.]]><
    <string name="amazon_dash_celebration_title">"Start by saying:"</string>
    <string name="amazon_dash_celebration_body">"“Alexa, order a new headbrush set”"</string>
    <string name="amazon_dash_celebration_confirm_button">"Got it"</string>
    <string name="amazon_dash_connect_error_invalid_link">"Failed to link the account. Please try again."</string>
    <string name="amazon_dash_connect_error_unknown">"Unable to link the account."</string>
    <string name="tb_settings_brush_details_dsp">"DSP version"</string>
    <string name="settings_amazon_account_linked">"Amazon account linked"</string>
    <string name="settings_rate_our_app">"Rate our app"</string>
    <string name="select_profile_header">"Who's brushing?"</string>
    <string name="select_profile_add_profile">"Add a profile"</string>
    <string name="select_profile_close">"Close"</string>
...
