...
      android:textAppearance="?textAppearanceHeadline4"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/more_ways_to_earn_points_card_items"
      android:layout_width="@dimen/match_constraints"
      android:layout_height="wrap_content"
      android:clipToPadding="false"
      android:overScrollMode="never"
      android:paddingStart="@dimen/dot"
      android:paddingTop="@dimen/dot_double"
...
