...
      android:layout_marginStart="@dimen/dot_double"
      android:layout_marginTop="@dimen/dot_double"
      android:layout_marginEnd="@dimen/dot_double"
      android:layout_marginBottom="@dimen/dot_double">

      <TextView
        android:id="@+id/more_ways_to_earn_points"
        style="@style/Widget.TextView.PointsAwarded"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@{@plurals/more_ways_to_earn_points_points_format(binding.points, binding.points)}"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
...
